[package]
name = "rust-os"
version = "0.1.0"
edition = "2018"
author = ["Jayjeet Chakraborty <jc.github@rediffmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.11.4"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
